# localLLM_test

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  spesification.md
.claude/: hooks.json  settings.json
.claude/agents/: python-build-resolver.md  python-reviewer.md  rust-build-resolver.md  rust-reviewer.md  ts-build-resolver.md  ts-reviewer.md
.claude/commands/: python-build.md  python-review.md  python-test.md  rust-build.md  rust-review.md  rust-test.md  ts-build.md  ts-review.md  ts-test.md
.claude/rules/: agents.md  hooks.md
.claude/skills/python-patterns/: SKILL.md
.claude/skills/python-testing/: SKILL.md
.claude/skills/rust-patterns/: SKILL.md
.claude/skills/rust-testing/: SKILL.md
.claude/skills/typescript-patterns/: SKILL.md
.claude/skills/typescript-testing/: SKILL.md
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  error.rs  main.rs
backend/src/auth/: jwt.rs  middleware.rs
backend/src/models/: user.rs
backend/src/routes/: auth.rs  chat.rs  documents.rs  health.rs  mod.rs
docker/postgres/init/: 001_init.sql
etl/: Dockerfile  pyproject.toml
etl/src/: config.py  main.py
etl/src/routes/: documents.py  health.py
etl/src/services/: chunker.py  embedding.py  minio_client.py  parser.py  pipeline.py  qdrant_client.py
etl/tests/: test_health.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.tsx
frontend/src/hooks/: useChat.ts
llm/: .dockerignore  Dockerfile  pyproject.toml
llm/src/: config.py  main.py
llm/tests/: test_health.py
(+11 files in other folders)
